--- a/Source/Blog.WebApplication/Content/Site.css
+++ b/Source/Blog.WebApplication/Content/Site.css
@@ -31,6 +31,16 @@ textarea {
 .media-profile {
     width: 35px;
 }
+.media {
+    border: 1px solid transparent;
+    padding: 8px;
+}
+
+.media:hover {
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+}
 
 .navbar-user-profile {
     max-height: 25px;
@@ -78,6 +88,14 @@ textarea {
     margin: 0 25px 2px 0;
 }
 
-textarea {
+#text-area-comment, #reply-text {
     max-width: 100%;
+}
+
+#topic-name {
+    text-decoration: none;
+}
+
+#no-padding-body {
+    padding: 0;
 }
