--- a/Source/Blog.WebApplication/Views/Account/Register.cshtml
+++ b/Source/Blog.WebApplication/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form", @class = "form-vertical" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
