--- a/Source/Blog.WebApplication/Views/Shared/_Layout.cshtml
+++ b/Source/Blog.WebApplication/Views/Shared/_Layout.cshtml
@@ -14,6 +14,6 @@
             <p>&copy; @DateTime.Now.Year - My Blog</p>
         </footer>
     </div>
-    @RenderSection("scripts", false)
+    @RenderSection("Scripts", false)
 </body>
 </html>
