--- a/Source/Blog.WebApplication/Views/Topic/GetById.cshtml
+++ b/Source/Blog.WebApplication/Views/Topic/GetById.cshtml
@@ -2,7 +2,6 @@
 @{
     this.ViewBag.Title = $"{this.Context.GetEnumToString(Model.Category)} Topic";
 }
-
 <h2>@this.ViewBag.Title</h2>
 <hr />
 <div class="container">
@@ -32,25 +31,70 @@
                         <img src="@this.Context.GetProfilePictureUrl(reply.User.Id)" class="media-object media-profile" alt="Cannot load image" />
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading text-danger"><a href="@Url.Action("UserComments", "Account", new { id = reply.UserId })">@reply.User.UserName</a> <small class="text-muted">Posted on: @reply.ReplayDate.ToShortDateString()</small></h4>
+                        <h4 class="media-heading"><a href="@Url.Action("UserComments", "Account", new { id = reply.UserId })" class="text-danger">@reply.User.UserName</a> <small class="text-muted">Posted on: @reply.ReplayDate.ToShortDateString()</small></h4>
                         <p>@reply.ReplayText</p>
                     </div>
+                    @if (this.User.Identity.GetUserId() == reply.UserId)
+                    {
+                        <div class="media-right">
+                            <div class="btn-group btn-group-justified">
+                                <a href="#" class="btn btn-default btn-sm" reply-id="@reply.Id" data-toggle="modal" data-target="#edit" style="width: 43px">Edit</a>
+                                <a href="@Url.Action("DeleteReply", "Reply", new { replyId = reply.Id })" class="btn btn-default btn-sm" style="width: 57px">Delete</a>
+                            </div>
+                        </div>
+                        <div class="modal fade" id="edit" role="dialog">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title"></h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="row well">
+                                            @using (Html.BeginForm("EditInModal", "Reply", FormMethod.Post))
+                                            {
+                                                @Html.ValidationSummary()
+                                                <div class="form-group">
+                                                    <textarea id="reply-text" name="ReplayText" class="form-control" rows="5">@reply.ReplayText</textarea>
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="text" id="user-id" name="UserId" class="form-control hidden" />
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="text" id="reply-id" name="Id" class="form-control hidden" />
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="text" id="topic-id" name="TopicId" class="form-control hidden" />
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="text" id="reply-date" name="ReplayDate" class="form-control hidden" />
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="submit" value="Done" class="btn btn-default" />
+                                                </div>
+                                            }
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
                 </div>
             }
         </div>
         <br />
         <div class="row well">
             <div class="text-center">Leave comment about this topic or join the discussion ...</div>
-            @using (Html.BeginForm("SendComment", "Topic", new { @class = "form-horizontal" }))
+            @using (Html.BeginForm("SendReply", "Reply", new { @class = "form-horizontal" }))
             {
                 <div class="form-group">
                     <input type="text" name="ReplierId" value="@this.Context.User.Identity.GetUserId()" class="hidden" />
                 </div>
                 <div class="form-group">
-                    <input type="text" name="TopicId" value="@Model.Id" class="hidden" />
+                    <input type="text" name="TopicId" value="@this.Model.Id" class="hidden" />
                 </div>
                 <div class="form-group">
-                    <textarea name="Text" class="form-control" rows="5"></textarea>
+                    <textarea name="Text" class="form-control" id="text-area-comment" rows="5"></textarea>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Send" class="btn btn-default" />
@@ -59,3 +103,7 @@
         </div>
     </div>
 </div>
+@section Scripts
+{
+    @Scripts.Render("~/bundles/userCommentHandler")
+}
