--- a/Source/Blog.WebApplication/Views/Account/Login.cshtml
+++ b/Source/Blog.WebApplication/Views/Account/Login.cshtml
@@ -2,7 +2,6 @@
 @{
     ViewBag.Title = "Log in";
 }
-
 <h2>@ViewBag.Title.</h2>
 <div class="row">
     <div class="col-md-8">
@@ -51,7 +50,7 @@
         </section>
     </div>
 </div>
-
-@section Scripts {
+@section Scripts
+{
     @Scripts.Render("~/bundles/jqueryval")
 }
