--- a/Source/Blog.WebApplication/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Source/Blog.WebApplication/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ExternalLoginListViewModel
-@using Microsoft.Owin.Security
-
+@*@HtmlHelpers.GetExternalLogins(this.Context)*@
 <h4>Use another service to log in.</h4>
 <hr />
 @{
     var loginProviders = this.Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-    if (loginProviders.Any()) {
+    if (!loginProviders.Any())
+    {
         <div>
             <p>
                 There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
