--- a/Source/Blog.WebApplication/Views/Account/EditProfile.cshtml
+++ b/Source/Blog.WebApplication/Views/Account/EditProfile.cshtml
@@ -12,6 +12,7 @@
     <hr />
     <div class="container">
         <div class="row">
+            @Html.ValidationSummary("", new { @class = "text-danger" })
             <div class="col-md-5">
                 <div class="form-group">
                     @this.Html.LabelFor(m => m.FirstName, new {@class = "col-md-3 control-label"})
@@ -35,11 +36,11 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <div class="container">
-                        <img src="@Model.ProfilePictureUrl" class="img-responsive img-thumbnail" alt="No profile picture" />
+                        <img src="@Model.ProfilePictureUrl" class="img-responsive img-thumbnail" alt="No profile picture"/>
                     </div>
                     <div class="container">
-                        @Html.LabelFor(m => m.PostedFileBase, new { @class = "control-label btn btn-default" })
-                        @Html.TextBoxFor(m => m.PostedFileBase, new { @class = "form-control hidden", type = "file" })
+                        @Html.LabelFor(m => m.PostedFileBase, new {@class = "control-label btn btn-default"})
+                        @Html.TextBoxFor(m => m.PostedFileBase, new {@class = "form-control hidden", type = "file"})
                     </div>
                 </div>
             </div>
