--- a/Source/Blog.WebApplication/Views/Account/UserComments.cshtml
+++ b/Source/Blog.WebApplication/Views/Account/UserComments.cshtml
@@ -1,28 +1,32 @@
-﻿@model IEnumerable<Reply>
+﻿@model IEnumerable<UserReplyViewModel>
 @{
-    ViewBag.Title = $"{Model.FirstOrDefault()?.User.UserName} Comments";
+    this.ViewBag.Title = $"{this.Model.FirstOrDefault()?.Username} Comments";
+    var userProfilePicture = this.Model.FirstOrDefault()?.UserProfileImage;
 }
-<h2>@ViewBag.Title</h2>
+<h2>@this.ViewBag.Title</h2>
 <hr />
 <div class="container">
     <div class="row">
-        <div class="col-md-8 col-md-push-2">
-            @foreach (var reply in Model)
+        <div class="col-md-3">
+            <img src="@userProfilePicture" class="img-responsive img-rounded" alt="No profile image"/>
+        </div>
+        <div class="col-md-8">
+            @foreach (var reply in this.Model)
             {
                 <div class="media">
                     <div class="media-left">
-                        <img src="@Context.GetProfilePictureUrl(reply.UserId)" class="media-object media-profile" alt="No profile picture" />
+                        <img src="@userProfilePicture" class="media-object media-profile" alt="No profile picture"/>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading text-danger">@reply.User.UserName <small class="text-muted">Posted on: @reply.ReplayDate.ToShortDateString()</small></h4>
-                        <p>@reply.ReplayText</p>
+                        <h4 class="media-heading text-danger">@reply.Username <small class="text-muted">Posted on: @reply.ReplayDate.ToShortDateString()</small></h4>
+                        <p>@reply.ReplyText</p>
                     </div>
                     @if (this.User.Identity.GetUserId() == reply.UserId)
                     {
                         <div class="media-right">
                             <div class="btn-group btn-group-justified">
-                                <a href="#" class="btn btn-default btn-sm" reply-id="@reply.Id" data-toggle="modal" data-target="#edit" style="width: 43px">Edit</a>
-                                <a href="@Url.Action("DeleteReply", "Reply", new { replyId = reply.Id })" class="btn btn-default btn-sm" style="width: 57px">Delete</a>
+                                <a href="#" class="btn btn-default btn-sm" reply-id="@reply.ReplyId" data-toggle="modal" data-target="#edit" style="width: 43px">Edit</a>
+                                <a href="@Url.Action("DeleteReply", "Reply", new {replyId = reply.ReplyId})" class="btn btn-default btn-sm" style="width: 57px">Delete</a>
                             </div>
                         </div>
                         <div class="modal fade" id="edit" role="dialog">
@@ -38,22 +42,22 @@
                                             {
                                                 @Html.ValidationSummary()
                                                 <div class="form-group">
-                                                    <textarea id="reply-text" name="ReplayText" class="form-control" rows="5">@reply.ReplayText</textarea>
+                                                    <textarea id="reply-text" name="ReplayText" class="form-control" rows="5">@reply.ReplyText</textarea>
                                                 </div>
                                                 <div class="form-group">
-                                                    <input type="text" id="user-id" name="UserId" class="form-control hidden" />
+                                                    <input type="text" id="user-id" name="UserId" class="form-control hidden"/>
                                                 </div>
                                                 <div class="form-group">
-                                                    <input type="text" id="reply-id" name="Id" class="form-control hidden" />
+                                                    <input type="text" id="reply-id" name="Id" class="form-control hidden"/>
                                                 </div>
                                                 <div class="form-group">
-                                                    <input type="text" id="topic-id" name="TopicId" class="form-control hidden" />
+                                                    <input type="text" id="topic-id" name="TopicId" class="form-control hidden"/>
                                                 </div>
                                                 <div class="form-group">
-                                                    <input type="text" id="reply-date" name="ReplayDate" class="form-control hidden" />
+                                                    <input type="text" id="reply-date" name="ReplayDate" class="form-control hidden"/>
                                                 </div>
                                                 <div class="form-group">
-                                                    <input type="submit" value="Done" class="btn btn-default" />
+                                                    <input type="submit" value="Done" class="btn btn-default"/>
                                                 </div>
                                             }
                                         </div>
@@ -63,7 +67,7 @@
                         </div>
                     }
                     <div class="media-bottom">
-                        <small class="text-muted">Topic: <a href="@Url.Action("GetById", "Topic", new { id = reply.Topic.Id })" id="topic-name">@reply.Topic.Title</a></small>
+                        <small class="text-muted">Topic: <a href="@Url.Action("GetById", "Topic", new {id = reply.TopicId})" id="topic-name">@reply.TopicTitle</a></small>
                     </div>
                 </div>
             }
