--- a/Source/Blog.WebApplication/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Source/Blog.WebApplication/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,31 +1,15 @@
 ﻿@model ExternalLoginListViewModel
-@*@HtmlHelpers.GetExternalLogins(this.Context)*@
 <h4>Use another service to log in.</h4>
 <hr />
-@{
-    var loginProviders = this.Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-    if (!loginProviders.Any())
-    {
-        <div>
-            <p>
-                There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
-            </p>
-        </div>
-    }
-    else
-    {
-        using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl }))
-        {
-            @Html.AntiForgeryToken()
-            <div id="socialLoginList">
-                <p>
-                    @foreach (var p in loginProviders)
-                    {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
-                    }
-                </p>
-            </div>
-        }
-    }
+@using (Html.BeginForm("ExternalLogin", "Account", new { Model.ReturnUrl }))
+{
+    @Html.AntiForgeryToken()
+    <div id="socialLoginList">
+        <p>
+            @foreach (var providers in Model.AuthenticationDescriptions)
+            {
+                <button type="submit" class="btn btn-default" id="@providers.AuthenticationType" name="provider" value="@providers.AuthenticationType" title="Log in using your @providers.Caption account">@providers.AuthenticationType</button>
+            }
+        </p>
+    </div>
 }
