--- a/Source/Blog.WebApplication/Views/Topic/GetById.cshtml
+++ b/Source/Blog.WebApplication/Views/Topic/GetById.cshtml
@@ -1,4 +1,5 @@
-﻿@model TopicViewModel2
+﻿@using System.Threading.Tasks
+@model TopicViewModel2
 @{
     this.ViewBag.Title = $"{this.Context.GetEnumToString(this.Model.TopicCategory)} Topic";
 }
