--- a/Source/Blog.WebApplication/Views/Shared/_ExternalLoginProviders.cshtml
+++ b/Source/Blog.WebApplication/Views/Shared/_ExternalLoginProviders.cshtml
@@ -3,7 +3,7 @@
 @this.Html.AntiForgeryToken()
 <div id="socialLoginList">
     <p>
-        @foreach (var providers in loginProviders)
+        @foreach (var providers in this.Model.AuthenticationDescriptions)
         {
             <button type="submit" class="btn btn-default" id="@providers.AuthenticationType" name="provider" value="@providers.AuthenticationType" title="Log in using your @providers.Caption account">@providers.AuthenticationType</button>
         }
