--- a/Source/Blog.WebApplication/Views/Shared/_LoggedInUserNavbar.cshtml
+++ b/Source/Blog.WebApplication/Views/Shared/_LoggedInUserNavbar.cshtml
@@ -3,7 +3,7 @@
     @Html.AntiForgeryToken()
     <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-            <a href="@Url.Action("Index", "Manage")" title="Manage" class="dropdown-toggle" data-toggle="dropdown">@this.User.Identity.Name <img src="@this.Context.GetProfilePictureUrl(this.User.Identity.GetUserId())" class="img-responsive profile-user-image navbar-user-profile" alt="No image to display" /></a>
+            <a href="@Url.Action("Index", "Manage")" title="Manage" class="dropdown-toggle" data-toggle="dropdown">@this.User.Identity.Name <img src="" class="img-responsive profile-user-image navbar-user-profile" id="currentLoggedInUser" alt="No image to display"/></a>
             <ul class="dropdown-menu">
                 @if (this.User.IsInRole("Admin"))
                 {
@@ -11,8 +11,20 @@
                 }
                 <li><a href="@Url.Action("Index", "Manage")" title="Manage">Manage Account</a></li>
                 <li><a href="@Url.Action("EditProfile", "Account")" title="Edit">Edit Profile</a></li>
-                <li><p id="log-off" title="Log off">Log off</p></li>
+                <li>
+                    <p id="log-off" title="Log off">Log off</p></li>
             </ul>
         </li>
     </ul>
 }
+<script>
+    (function () {
+        $.ajax({
+            url: ("/account/userprofileimage?id=" + '@($"{this.User.Identity.GetUserId()}")'),
+            method: "GET",
+            contentType: "text/plain"
+        }).done(function (urlData) {
+            $("#currentLoggedInUser").attr("src", urlData);
+        });
+    }());
+</script>
