--- a/Source/Blog.WebApplication/Views/Topic/GetById.cshtml
+++ b/Source/Blog.WebApplication/Views/Topic/GetById.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Threading.Tasks
-@model TopicViewModel2
+﻿@model TopicViewModel2
 @{
     this.ViewBag.Title = $"{this.Context.GetEnumToString(this.Model.TopicCategory)} Topic";
 }
@@ -24,65 +23,7 @@
         <div class="text-justify">@string.Join(string.Empty, this.Model.TopicText)</div>
         <br />
         <hr />
-        <div class="row">
-            @foreach (var reply in this.Model.ReplyViewModels)
-            {
-                <div class="media">
-                    <div class="media-left">
-                        <img src="@reply.ReplierProfilePicture" class="media-object media-profile" alt="Cannot load image" />
-                    </div>
-                    <div class="media-body">
-                        <h4 class="media-heading"><a href="@Url.Action("UserComments", "Account", new { id = reply.ReplierId})" class="text-danger">@reply.ReplierUserName</a> <small class="text-muted">Posted on: @reply.ReplyDate.ToShortDateString()</small></h4>
-                        <p>@reply.ReplyText</p>
-                    </div>
-                    @if (this.User.Identity.GetUserId() == reply.ReplierId)
-                    {
-                        <div class="media-right">
-                            <div class="btn-group btn-group-justified">
-                                <a href="#" class="btn btn-default btn-sm" reply-id="@reply.Id" data-toggle="modal" data-target="#edit" style="width: 43px">Edit</a>
-                                <a href="@Url.Action("DeleteReply", "Reply", new { replyId = reply.Id })" class="btn btn-default btn-sm" style="width: 57px">Delete</a>
-                            </div>
-                        </div>
-                        <div class="modal fade" id="edit" role="dialog">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        <h4 class="modal-title"></h4>
-                                    </div>
-                                    <div class="modal-body">
-                                        <div class="row well">
-                                            @using (Html.BeginForm("EditInModal", "Reply", FormMethod.Post))
-                                            {
-                                                @Html.ValidationSummary()
-                                                <div class="form-group">
-                                                    <textarea id="reply-text" name="ReplayText" class="form-control" rows="5">@reply.ReplyText</textarea>
-                                                </div>
-                                                <div class="form-group">
-                                                    <input type="text" id="user-id" name="UserId" class="form-control hidden" />
-                                                </div>
-                                                <div class="form-group">
-                                                    <input type="text" id="reply-id" name="Id" class="form-control hidden" />
-                                                </div>
-                                                <div class="form-group">
-                                                    <input type="text" id="topic-id" name="TopicId" class="form-control hidden" />
-                                                </div>
-                                                <div class="form-group">
-                                                    <input type="text" id="reply-date" name="ReplayDate" class="form-control hidden" />
-                                                </div>
-                                                <div class="form-group">
-                                                    <input type="submit" value="Done" class="btn btn-default" />
-                                                </div>
-                                            }
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    }
-                </div>
-            }
-        </div>
+        <div class="row" id="comment-accepter" topic-id="@Model.TopicId"></div>
         <br />
         <div class="row well">
             <div class="text-center">Leave comment about this topic or join the discussion ...</div>
@@ -106,5 +47,6 @@
 </div>
 @section Scripts
 {
-    @Scripts.Render("~/bundles/userCommentHandler")
+    @Scripts.Render("~/bundles/commentAcceptHandler")
+    @Scripts.Render("~/bundles/editUserCommentHandler")
 }
